fix focus of image record link creating scrollbar

--- a/src/views/themes/default/sass/global/partials/_layout.sass
+++ b/src/views/themes/default/sass/global/partials/_layout.sass
@@ -263,7 +263,6 @@ input.button, button
   width: 95%
   padding: 0
   margin: 0
-  overflow-x: hidden
   li
     display: inline-block
     vertical-align: top
